# dynamic_orchestrator/controllers/default_controller.py
@@ -1,0 +1,20 @@
+import connexion
+import six
+
+from dynamic_orchestrator import util
+
+
+def depplan_create(app_id, federation_id):  # noqa: E501
+    """depplan_create
+
+     # noqa: E501
+
+    :param app_id: Application model Yaml file identifier
+    :type app_id: str
+    :param federation_id: MonitorData resources availabilit Yaml file identifier
+    :type federation_id: str
+
+    :rtype: str
+    """
+    return 'do some magic!'
+
