# swagger_server/controllers/default_controller.py
@@ -1,45 +1,0 @@
-import connexion
-import six
-
-from swagger_server import util
-
-
-def appmodel_delete(app_id):  # noqa: E501
-    """appmodel_delete
-
-     # noqa: E501
-
-    :param app_id: 
-    :type app_id: str
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
-def depplan_create(app_id, federation_id):  # noqa: E501
-    """depplan_create
-
-     # noqa: E501
-
-    :param app_id: Application model Yaml file identifier
-    :type app_id: str
-    :param federation_id: MonitorData resources availabilit Yaml file identifier
-    :type federation_id: str
-
-    :rtype: str
-    """
-    return 'do some magic!'
-
-
-def monitordata_delete(federation_id):  # noqa: E501
-    """monitordata_delete
-
-     # noqa: E501
-
-    :param federation_id: 
-    :type federation_id: str
-
-    :rtype: None
-    """
-    return 'do some magic!'
